@@ -23,6 +23,7 @@ allow dcc { filename "*.jpg"; soft yes; };
 allow dcc { filename "*.jpeg"; soft yes; };
 allow dcc { filename "*.gif"; soft yes; };
 allow dcc { filename "*.png"; soft yes; };
+allow dcc { filename "*.bmp"; soft yes; };
 /* audio / video (but not scripted/playlists!) */
 allow dcc { filename "*.mp1"; soft yes; };
 allow dcc { filename "*.mp2"; soft yes; };
@@ -31,11 +32,13 @@ allow dcc { filename "*.mpg"; soft yes; };
 allow dcc { filename "*.mpeg"; soft yes; };
 allow dcc { filename "*.m1v"; soft yes; };
 allow dcc { filename "*.m2v"; soft yes; };
+allow dcc { filename "*.vob"; soft yes; };
 allow dcc { filename "*.wav"; soft yes; };
 allow dcc { filename "*.wma"; soft yes; };
 allow dcc { filename "*.wmv"; soft yes; };
 /* text / misc */
 allow dcc { filename "*.txt"; soft yes; };
+allow dcc { filename "*.log"; soft yes; };
 allow dcc { filename "*.pdf"; soft yes; };
 allow dcc { filename "*.c"; soft yes; };
 allow dcc { filename "*.cpp"; soft yes; };
