@@ -2064,6 +2064,8 @@ set {
   stats flags.</p>
 <p><font class="set">set::maxchannelsperuser &lt;amount-of-channels&gt;;</font><br>
   Specifies the number of channels a single user may be in at any one time.</p>
+<p><font class="set">set::maxdccallow &lt;amount-of-entries&gt;;</font><br>
+  Specifies the maximum number of entries a user can have on his/her DCCALLOW list.</p>
 <p><font class="set">set::channel-command-prefix &lt;command-prefixes&gt;;</font><br>
   Specifies the prefix characters for services "in channel commands". Messages starting with 
   any of the specified characters will still be sent even if the client is +d. The default 
