@@ -329,8 +329,8 @@ extern unsigned char *StripColors(unsigned char *);
 extern const char *StripControlCodes(unsigned char *text);
 extern char *canonize(char *buffer);
 extern int webtv_parse(aClient *sptr, char *string);
-extern ConfigItem_deny_dcc *dcc_isforbidden(aClient *sptr, aClient *target, char *filename);
-extern ConfigItem_deny_dcc *dcc_isdiscouraged(aClient *sptr, aClient *target, char *filename);
+extern ConfigItem_deny_dcc *dcc_isforbidden(aClient *sptr, char *filename);
+extern ConfigItem_deny_dcc *dcc_isdiscouraged(aClient *sptr, char *filename);
 extern int check_registered(aClient *);
 extern int check_registered_user(aClient *);
 extern char *get_client_name(aClient *, int);
